# GTKMM-4.0VcpkgCmakeExample

./: CMakeLists.txt  CMakeSettings.json  README.md
src/: CMakeLists.txt  app.cpp  app.h
